--- a/workflows/nepse_data_processing.yml
+++ b/workflows/nepse_data_processing.yml
@@ -1,1 +1,37 @@
 
+name: Run NEPSE Data Processing
+
+on:
+  schedule:
+    - cron: '15 10 * * *'  # Runs at 10:15 AM UTC, which is 4:00 PM Nepali Time daily.
+  workflow_dispatch:  # Allows manual triggering
+
+jobs:
+  run_script:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v2
+
+      - name: Set up Python
+        uses: actions/setup-python@v2
+        with:
+          python-version: '3.x'
+
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install jupyter nbconvert gitpython
+
+      - name: Run Jupyter Notebook
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        run: |
+          jupyter nbconvert --to notebook --execute --inplace "KMC_Naya.ipynb"
+
+      - name: Commit and push if there are changes
+        run: |
+          git config --local user.email "action@github.com"
+          git config --local user.name "GitHub Action"
+          git add .
+          git diff --quiet && git diff --staged --quiet || (git commit -m "Update NEPSE data" -a && git push)
