--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,1 +1,28 @@
 
+name: Run KMC naya automate Notebook Daily
+
+on:
+  workflow_dispatch:  # This allows manual runs
+  schedule:
+    - cron: '15 10 * * *'  # Runs daily at 4:00 PM Nepal Time (10:15 AM UTC)
+
+jobs:
+  run_notebook:
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v2
+
+      - name: Set up Python
+        uses: actions/setup-python@v2
+        with:
+          python-version: '3.x'
+
+      - name: Install Dependencies
+        run: |
+          pip install jupyter nbconvert
+
+      - name: Run the notebook
+        run: |
+          jupyter nbconvert --to notebook --execute --inplace "KMC naya automate.ipynb"
