--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,4 +24,4 @@ jobs:
 
       - name: Run the notebook
         run: |
-          jupyter nbconvert --to notebook --execute --inplace "KMC_naya_automate.ipynb"
+          jupyter nbconvert --to notebook --execute --inplace "KMC_Naya.ipynb"
