--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,7 +18,7 @@ jobs:
           pip install jupyter nbconvert GitPython
       - name: Run the notebook
         run: |
-          jupyter nbconvert --to notebook --execute --inplace "Nepse_Full.ipynb"
+          jupyter nbconvert --to notebook --execute --inplace "Nepse_Full10.ipynb"
         env:
           GITHUB_WORKSPACE: ${{ github.workspace }}
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
