--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,16 +1,44 @@
-name: Scheduled Analysis
+name: Quantum Analysis Scheduler
 
 on:
   schedule:
-    - cron: '15 10 * * 0-4'
+    - cron: '15 10 * * 0-4'  # Correct 4 PM NPT (Sunday-Thursday)
   workflow_dispatch:
 
 jobs:
   analyze:
     runs-on: ubuntu-latest
+    timeout-minutes: 15
+    
     steps:
-      - uses: actions/checkout@v4
-      - name: Run Quantum Analysis
-        env:
-          GH_TOKEN: ${{ secrets.QUANTUM_PAT }}  # Reference from secrets
-        run: python New_espen.py
+    - name: Checkout code
+      uses: actions/checkout@v4
+
+    - name: Set up Python
+      uses: actions/setup-python@v4
+      with:
+        python-version: '3.10'
+
+    - name: Install dependencies
+      run: |
+        pip install jupyter pandas numpy xgboost plotly requests
+        # Add other Colab-specific dependencies here
+
+    - name: Convert Colab notebook to Python script
+      uses: github/scripts/convert-colab-to-python@v1
+      with:
+        notebook: YOUR_NOTEBOOK.ipynb  # Your Colab file
+        output: colab_script.py
+
+    - name: Run Analysis
+      env:
+        GITHUB_TOKEN: ${{ secrets.QUANTUM_PAT }}  # SECURE token reference
+      run: python colab_script.py
+
+    - name: Commit results
+      run: |
+        git config --global user.name "GitHub Actions"
+        git config --global user.email "actions@github.com"
+        git add .
+        git commit -m "Auto-commit analysis results" || echo "No changes"
+        git push
