--- a/.github/workflows/nepse_scheduler.yml
+++ b/.github/workflows/nepse_scheduler.yml
@@ -2,7 +2,7 @@ name: NEPSE Daily Automation
 
 on:
   schedule:
-    - cron: '15 10 * * 0-4'  # 4 PM Nepal Time (10:15 UTC) Sunday-Thursday
+    - cron: '15 10 * * 0-4'  # Runs Sunday-Thursday at 4 PM Nepal Time (10:15 UTC)
   workflow_dispatch:  # Allows manual triggering
 
 jobs:
@@ -22,7 +22,7 @@ jobs:
 
       - name: Install dependencies
         run: |
-          pip install pandas requests gitpython python-dotenv
+          pip install pandas requests gitpython python-dotenv nepse-scraper xlsxwriter beautifulsoup4
 
       - name: Run automation script
         env:
@@ -30,10 +30,15 @@ jobs:
         run: |
           python nepse_automation.py
 
-      - name: Commit and push changes
+      - name: Configure Git
         run: |
-          git config --global user.name "GitHub Actions"
-          git config --global user.email "actions@github.com"
+          git config --global user.name "github-actions[bot]"
+          git config --global user.email "github-actions[bot]@users.noreply.github.com"
+
+      - name: Commit and Push Changes
+        env:
+          GITHUB_TOKEN: ${{ secrets.GH_TOKEN }}
+        run: |
           git add .
-          git commit -m "Auto-update data [Manual Trigger]"
-          git push
+          git commit -m "Auto-update data [$(date)]" || echo "No changes to commit"
+          git push https://${{ secrets.GH_TOKEN }}@github.com/iamsrijit/Nepse.git main || echo "No changes to push"
