--- a/.github/workflows/nepse_scheduler.yml
+++ b/.github/workflows/nepse_scheduler.yml
@@ -2,7 +2,7 @@ name: NEPSE Daily Automation
 
 on:
   schedule:
-    - cron: '15 10 * * 0-4'  # 4 PM Nepal Time (10:15 UTC), Sun-Thu
+    - cron: '15 10 * * 0-4'  # 4:15 PM Nepal Time (10:15 UTC), Sun-Thu
   workflow_dispatch:
 
 jobs:
@@ -10,7 +10,6 @@ jobs:
     runs-on: ubuntu-latest
     env:
       TZ: Asia/Kathmandu
-      GITHUB_WORKSPACE: ${{ github.workspace }}
 
     steps:
       - name: Checkout code
@@ -22,12 +21,14 @@ jobs:
         uses: actions/setup-python@v4
         with:
           python-version: '3.10'
+          cache: 'pip'  # Add caching for faster builds
 
       - name: Install dependencies
         run: |
+          python -m pip install --upgrade pip
           pip install pandas requests gitpython python-dotenv \
               nepse-scraper xlsxwriter beautifulsoup4 joblib \
-              scikit-learn matplotlib
+              scikit-learn matplotlib openpyxl
 
       - name: Run automation script
         env:
@@ -43,8 +44,8 @@ jobs:
           git config --global user.name "github-actions[bot]"
           git config --global user.email "41898282+github-actions[bot]@users.noreply.github.com"
           
-          # Add only relevant files
-          git add *.csv
+          # Add all CSV files in data directory
+          git add data/*.csv
           
           # Smart commit handling
           git diff-index --quiet HEAD || git commit -m "Auto-update: $(date +'%Y-%m-%d %H:%M:%S')"
@@ -54,15 +55,8 @@ jobs:
           git push origin HEAD:main
 
       - name: Cleanup old files
-        env:
-          GH_TOKEN: ${{ secrets.GH_TOKEN }}
         run: |
-          # Keep last 3 files of each type
+          # Keep last 3 files of each type in data directory
           for prefix in espen EMA_Cross_for; do
-            files=$(git ls-files -- "$prefix*.csv" | sort -r | awk 'NR>3')
-            [ -n "$files" ] && git rm -q $files
+            ls -t data/$prefix*.csv | tail -n +4 | xargs -r rm --
           done
-          
-          # Commit and push cleanup
-          git diff-index --quiet HEAD || git commit -m "Auto-cleanup old files"
-          git push origin HEAD:main
