--- a/.github/workflows/nepse_scheduler.yml
+++ b/.github/workflows/nepse_scheduler.yml
@@ -10,10 +10,15 @@ jobs:
     runs-on: ubuntu-latest
     env:
       TZ: Asia/Kathmandu
+      
+    permissions:
+      contents: write  # Required for pushing changes
 
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
+        with:
+          fetch-depth: 0  # Required for proper git history
 
       - name: Set up Python
         uses: actions/setup-python@v4
@@ -25,25 +30,25 @@ jobs:
           pip install nepse-scraper pandas requests beautifulsoup4 gitpython numpy xlsxwriter
 
       - name: Run automation script
-        env:
-          GH_TOKEN: ${{ secrets.GH_TOKEN }}
         run: python nepse_automation.py
 
       - name: Commit and push changes
         env:
-          GH_TOKEN: ${{ secrets.GH_TOKEN }}
+          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}  # Use default GitHub token
         run: |
           git config --global user.name "github-actions[bot]"
           git config --global user.email "41898282+github-actions[bot]@users.noreply.github.com"
           git add *.csv
           git diff-index --quiet HEAD || git commit -m "Auto-update: $(date +'%Y-%m-%d')"
           git remote set-url origin https://x-access-token:$GH_TOKEN@github.com/${{ github.repository }}
-          git push origin main
+          git push origin HEAD:main
 
       - name: Cleanup old files
+        env:
+          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
           for prefix in espen EMA_Cross_for; do
             files=$(git ls-files -- "$prefix*.csv" | sort -r | awk 'NR>3')
             [ -n "$files" ] && git rm -q $files
           done
-          git diff-index --quiet HEAD || git commit -m "Auto-cleanup" && git push origin main
+          git diff-index --quiet HEAD || (git commit -m "Auto-cleanup" && git push origin HEAD:main)
