--- a/.github/workflows/nepse_scheduler.yml
+++ b/.github/workflows/nepse_scheduler.yml
@@ -22,9 +22,7 @@ jobs:
         python-version: '3.10'
 
     - name: Install dependencies
-      run: |
-        python -m pip install --upgrade pip
-        pip install -r requirements.txt
+      run: pip install -r requirements.txt
 
     - name: Run data updater
       env:
