--- a/.github/workflows/nepse_scheduler.yml
+++ b/.github/workflows/nepse_scheduler.yml
@@ -21,8 +21,8 @@ jobs:
       with:
         python-version: '3.10'
 
-    - name: Install dependencies
-      run: pip install -r requirements.txt
+    # - name: Install dependencies
+    #   run: pip install -r requirements.txt
 
     - name: Run data updater
       env:
