--- a/.github/workflows/nepse_scheduler.yml
+++ b/.github/workflows/nepse_scheduler.yml
@@ -27,4 +27,4 @@ jobs:
     - name: Run data updater
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      run: python main.py
+      run: python nepse_automation.py
