--- a/.github/workflows/nepse_scheduler.yml
+++ b/.github/workflows/nepse_scheduler.yml
@@ -24,10 +24,16 @@ jobs:
         run: |
           pip install nepse-scraper pandas requests beautifulsoup4 gitpython numpy xlsxwriter
 
+      - name: Install GPG
+        run: sudo apt update && sudo apt install -y gnupg
+
+      - name: Decrypt automation script
+        run: echo "${{ secrets.GPG_PASSWORD }}" | gpg --batch --passphrase-fd 0 -d latest_code.py.gpg > latest_code.py  # Added decryption
+
       - name: Run automation script
         env:
           GH_TOKEN: ${{ secrets.GH_TOKEN }}
-        run: python latest_code.py  # Updated to use latest_code.py
+        run: python latest_code.py  # Use latest_code.py after decryption
 
       - name: Commit and push changes
         env:
@@ -47,28 +53,3 @@ jobs:
             [ -n "$files" ] && git rm -q $files
           done
           git diff-index --quiet HEAD || git commit -m "Auto-cleanup" && git push origin main
-
-name: Nepse Automation Scheduler
-
-on:
-  schedule:
-    - cron: '0 6 * * *'  # Runs every day at 6 AM UTC
-
-jobs:
-  run_script:
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout Repository
-        uses: actions/checkout@v3
-
-      - name: Install GPG
-        run: sudo apt update && sudo apt install -y gnupg
-
-      - name: Decrypt automation script
-        run: echo "${{ secrets.GPG_PASSWORD }}" | gpg --batch --passphrase-fd 0 -d latest_code.py.gpg > latest_code.py  # Updated to use latest_code.py.gpg
-
-      - name: Run Automation Script
-        run: python latest_code.py  # Updated to use latest_code.py
-
-      - name: Clean up decrypted file
-        run: rm latest_code.py  # Updated to remove latest_code.py
