--- a/.github/workflows/3vs9.yml
+++ b/.github/workflows/3vs9.yml
@@ -25,36 +25,32 @@ jobs:
         run: |
           pip install nepse-scraper pandas requests beautifulsoup4 gitpython numpy xlsxwriter
 
-      - name: Install GPG
-        run: sudo apt update && sudo apt install -y gnupg
-
-      - name: Decrypt automation script
-        run: echo "${{ secrets.GPG_PASSWORD }}" | gpg --batch --passphrase-fd 0 -d latest_code.py.gpg > latest_code.py
-
       - name: Run automation script
         env:
-          GH_TOKEN: ${{ secrets.GH_TOKEN }}
-        run: python latest_code.py
+          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        run: python "3 vs 9.py"
 
-      - name: Commit and push new file
+      - name: Commit and push new CSV files
         env:
-          GH_TOKEN: ${{ secrets.GH_TOKEN }}
+          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
           git config --global user.name "github-actions[bot]"
           git config --global user.email "41898282+github-actions[bot]@users.noreply.github.com"
           git add *.csv
+          # Only commit if there are changes
           git diff-index --quiet HEAD || git commit -m "Auto-update: $(date +'%Y-%m-%d')"
           git remote set-url origin https://x-access-token:$GH_TOKEN@github.com/${{ github.repository }}
           git push origin main
 
       - name: Keep only latest 3vs9EMA_Cross_for_ file
         env:
-          GH_TOKEN: ${{ secrets.GH_TOKEN }}
+          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
-          latest_file=$(ls -t 3vs9EMA_Cross_for_*.csv | head -n 1)
-          old_files=$(ls -t 3vs9EMA_Cross_for_*.csv | tail -n +2)
+          latest_file=$(ls -t 3vs9EMA_Cross_for_*.csv 2>/dev/null | head -n 1)
+          old_files=$(ls -t 3vs9EMA_Cross_for_*.csv 2>/dev/null | tail -n +2)
           if [ -n "$old_files" ]; then
             git rm -q $old_files
-            git commit -m "Auto-cleanup old 3vs9EMA_Cross_for_ files, kept $latest_file"
+            git diff-index --quiet HEAD || git commit -m "Auto-cleanup old 3vs9EMA_Cross_for_ files, kept $latest_file"
+            git remote set-url origin https://x-access-token:$GH_TOKEN@github.com/${{ github.repository }}
             git push origin main
           fi
