--- a/.github/workflows/nepse_scheduler.yml
+++ b/.github/workflows/nepse_scheduler.yml
@@ -1,34 +1,25 @@
-name: NEPSE Daily Automation
-
+@@ -3,7 +3,6 @@
 on:
   schedule:
     # - cron: '30 14 * * *'  # Runs every day at 8:15 PM Nepal Time (14:30 UTC)
+
     - cron: '15 10 * * 0-4'  # 4 PM Nepal Time (10:15 UTC), Sun-Thu
   workflow_dispatch:
 
-jobs:
-  run-script:
-    runs-on: ubuntu-latest
-    env:
-      TZ: Asia/Kathmandu
-
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
-
-      - name: Set up Python
-        uses: actions/setup-python@v4
-        with:
-          python-version: '3.10'
-
-      - name: Install dependencies
+@@ -26,32 +25,26 @@
         run: |
           pip install nepse-scraper pandas requests beautifulsoup4 gitpython numpy xlsxwriter
+
+      - name: Install GPG
+        run: sudo apt update && sudo apt install -y gnupg
+
+      - name: Decrypt automation script
+        run: echo "${{ secrets.GPG_PASSWORD }}" | gpg --batch --passphrase-fd 0 -d latest_code.py.gpg > latest_code.py  # Added decryption
 
       - name: Run automation script
         env:
           GH_TOKEN: ${{ secrets.GH_TOKEN }}
-        run: python nepse_autp.py  # Run nepse_auto.py directly
+        run: python latest_code.py  # Use latest_code.py after decryption
 
       - name: Commit and push changes
         env:
@@ -48,4 +39,3 @@ jobs:
             [ -n "$files" ] && git rm -q $files
           done
           git diff-index --quiet HEAD || git commit -m "Auto-cleanup" && git push origin main
-
