--- a/.github/workflows/scrape-nepse-fundamentals.yml
+++ b/.github/workflows/scrape-nepse-fundamentals.yml
@@ -4,8 +4,8 @@ name: Scrape NEPSE Fundamentals & Upload CSV
 
 on:
   schedule:
-    - cron: '0 12 * * *'   # Runs daily at 12:00 UTC (~5:45 PM Nepal time)
-  workflow_dispatch:       # Allows manual trigger from GitHub UI
+    - cron: '0 12 * * *'   # Daily at 12:00 UTC (~5:45 PM Nepal time)
+  workflow_dispatch:
 
 jobs:
   scrape-and-upload:
@@ -23,15 +23,21 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install google-colab-selenium[undetected] nepse-scraper requests pandas
+          pip install selenium webdriver-manager nepse-scraper requests pandas
+
+      - name: Setup Chrome & ChromeDriver
+        uses: browser-actions/setup-chrome@v1
+
+      - name: Verify Chrome
+        run: chrome --version
 
       - name: Run NEPSE Fundamentals Scraper
         env:
-          GH_TOKEN: ${{ secrets.GH_TOKEN }}   # GitHub token with repo scope
+          GH_TOKEN: ${{ secrets.GH_TOKEN }}
         run: |
           python scrape_fundamentals.py
 
-      - name: Commit and push if changed
+      - name: Commit and push updated CSV (if changed)
         run: |
           git config --global user.name "github-actions[bot]"
           git config --global user.email "github-actions[bot]@users.noreply.github.com"
